2007-05-201 Javier Fernandez Garcia-Boente <jfernandez@igalia.com>

	* Use 'what' string parameter of asyn status callback to knonw 
	what operaiton is being executed, in oder to decide if progress
	data is send back or not.a

	* Add camel operation and progress call to 'folder_rename' operation.
	
2007-05-20  Philip Van Hoof  <pvanhoof@gnome.org>

	* TnyAccountStore's alert_func has a 'question' parameter now

	* This was a major API change

2007-05-18  Javier Fernandez Garcia-Boente  <jfernandez@igalia.com>

   	* folder was 'reason' unnecesary in copy_folder_async.
        * fix bug: g_error_free not neccesary after g_error_propagate

2007-05-17  Philip Van Hoof  <pvanhoof@gnome.org>

	* Recursively removing folders

2007-05-17  Murray Cumming  <murrayc@murrayc.com>

	* libtinymail-maemo/tny-maemo-conic-device.c:
	(tny_maemo_conic_device_get_iap_list): When MAEMO_CONIC_DUMMY 
	hack together a list of fake debug* connection IDs as the result, 
	so we can simulate libconic in scratchbox.
	
	(tny_maemo_conic_device_get_current_iap_id): When MAEMO_CONIC_DUMMY, 
	return a fake debug* connection ID based on the value of a 
	MAEMO_CONIC_DUMMY_IAP_ID environment variable, so we can fake a 
	connection change (though the signal will not be emitted when the 
	environment variable changes.)
	
2007-05-16  Philip Van Hoof  <pvanhoof@gnome.org>

	* Removed the unworkable tny_folder_set_name, old code should replace
	this with tny_folder_copy with the del parameter set to TRUE and the
	folder store being the one you get using tny_folder_get_folder_store

	* This was a major API change

2007-05-16  Murray Cumming  <murrayc@murrayc.com>

	* libtinymail-camel/tny-camel-store-account.c:
	(tny_camel_store_account_prepare): Remove a warning that I shouldn't 
	have added in my last commit.

2007-05-16  Philip Van Hoof  <pvanhoof@gnome.org>

	* Some clarity for tny_folder_transfer_msgs in a GError for the
	developer who uses TnyHeader instances that came from